docs: first image's filepath changed

--- a/pages/02-08.md
+++ b/pages/02-08.md
@@ -21,7 +21,7 @@ Segundo Bernard Marr, Big Data é o "rastro" que geramos na era digital.
 
 Big Data porém não é somente uma grande quantidade de dados, mas sim todo o ciclo de obtenção e processamento desses dados
 
-![Big Data Cycle](<../img/Big Data cycle-1.png>)
+![Big Data Cycle](<../img/Big Data cycle.png>)
 
 Os dados são coletados de um determinado caso por um framework - Exemplo: Hadoop HDFS. 
 
