docs: git added

--- a/pages/09-08.md
+++ b/pages/09-08.md
@@ -6,20 +6,116 @@ Gabriel Faria e Silva
 
 **Módulos vistos:**
 
-- Introdução à Engenharia de Dados / ETL
+- Introdução à Engenharia de Dados / ETL e ELT
 - Git
 
 # Resumo dos módulos
 
 ## Git
-GIT é um sistema de controle de versionamento de software **distribuído**.
+GIT é um sistema de controle de Versionamento de Software **Distribuído** (DVCS).
 
-Cada versão do arquivo é duplicada localmente no PC de cada usuário
+Cada versão do arquivo é duplicada localmente no PC de cada usuário.
+
 Dessa forma, eles não compartilham a mesma área de trabalho no servidor e, assim, mesmo que o seu amigo esteja desconectado, você ainda assim pode fazer alterações no programa.
 
 ![Distribuído](../img/Distribuído.png)
 
+Alguns dos maiores benefícios de um DVCS:
+- Cada "clone" é como um backup;
+- Possibilita um fluxo de trabalho flexível;
+- Possibilidade de trabalhar sem conexão à rede.
 
+O ambiente de trabalho em um DVCS é separado por:
+- Ambiente local -> alterações feitas localmente por um PC;
+- Ambiente remoto -> local na nuvem / web onde o código é armazenado.
+
+![AmbientesGit](../img/AmbientesGit.png)
+
+Para passar de um ambiente para outro, são utilizados alguns comandos:
+
+    git add 
+    
+    //Passa os arquivos do repositório local para um ambiente de "transição" ou "preparação" entre o local e o remoto.
+
+    //Aguarda a mensagem do commit
+
+___
+
+    git commit
+
+    //Avança da área de "transição", aguardando apenas o "git push" para ir ao repositório remoto.
+
+    //-m "mensagem" -> permite adicionar uma mensagem / descrição ao commit.
+
+Fluxo básico no GIT:
+
+Em primeira instância, um repositório remoto é clonado no seu PC, ou seja, no repositório local.
+
+    git clone 
+    
+    //Clona um repositório remoto
+
+ANTES DE ENVIAR a nova versão por você LOCALMENTE desenvolvida, utilizar o "git pull" para ver se  não foi feita alguma outra alteração
+
+    git pull 
+    
+    //Junção dos comandos: git fetch e git merge
+    //Traz as informações do repositório remoto
+
+O comando "git push" atualiza o repositório remoto com suas alterações feitas no repositório local
+
+    git push 
+    
+    //OBS: Sempre verificar com o git pull se seu repositório local está sincronizado com o remoto antes de enviar qualquer alteração
+
+___
+
+O comando "git config" mostra todas ações possíveis em um programa
+Tem bem mais coisa em baixo, a imagem está cortada
+
+Na parte de "config":
+- Global -> se relaciona às configurações de um usuário do PC
+- System -> config de todos os usuários de um sistema
+- Local -> de um único repositório
+
+___
+
+    git config --global user.name "gabriel faria"
+    //O user name no PC agora está configurado como gabriel faria
+
+    git config user.name
+    >> gabriel faria    //Output
+
+    git config --global init.defaultBranch main
+    //Define a branch padrão inicial para "main"
+
+___
+
+#### Gerenciamento de Branches
+Branch é um **ponteiro que aponta para o commit mais recente**.
+
+Caso uma branch seja criada a partir de outra branch, ela passa a apontar para o mesmo commit que a branch superior apontava.
+
+Porém, as **branches trabalham de forma independente**, portanto, se eu adicionar um commit apenas na branch "teste", apenas "teste" passa a apontar para o novo commit.
+
+    git branch
+
+    //Mostra todas as branches do repositório
+
+Alterando de branch atual:
+
+    git checkout nome_da_branch
+
+    git checkout -b nova_branch //Cria uma nova branch e altera pra ela
+
+#### GitFlow
+![GitFlow](../img/GitFlow.png)
+
+O GitFlow é um sistema de gerenciamento de branches que consiste maiormente nas principais:
+
+- Master / Main: código disponível para o cliente / todos;
+- Develop: código ainda em produção. Quando o código da develop fica pronto para ser disponibilizado ao público, é subido para a main;
+- Features: implementação única em desenvolvimento contínuo. Quando uma feature fica pronta, é subida para a develop.
 
 ## Introdução à Engenharia de Dados
 ### ETL
@@ -86,3 +182,7 @@ Dessa forma os dados são armazenados em sua **forma bruta** e são transformado
 ![ELT_1](../img/ELT_1.png)
 
 ELT também soluciona problemas de escalabilidade, conseguindo manipular tando dados estruturados quanto não-estruturados na nuvem.
+
+# Recursos Utilizados
+- https://www.coursera.org/learn/etl-and-data-pipelines-shell-airflow-kafka
+- https://www.dio.me/courses/introducao-ao-git-e-ao-github
