docs: readme updated

--- a/pages/20-08.md
+++ b/pages/20-08.md
@@ -148,3 +148,11 @@ Para visualizar a mensagem publicada, no console do `CloudShell` digite o seguin
     gcloud pubsub subscriptions pull --auto-ack MySub
 
 Dessa forma, é realizado uma requisição (`pull`) do tópico `MySub`.
+
+# Recursos utilizados
+- https://www.cloudskillsboost.google/course_templates/623/labs/463336
+- https://www.cloudskillsboost.google/focuses/3719?parent=catalog
+- https://www.redhat.com/pt-br/topics/devops/what-is-ci-cd#:~:text=Na%20sigla%20CI%2FCD%2C%20","
+- https://cloud.google.com/pubsub/docs/overview?hl=pt-br
+- https://www.zendesk.com.br/blog/tipos-analise-de-dados/
+- https://medium.com/@devbrito91/mensageria-1330c6032049
